# livekit-playground

./: .env.example  README.md  pyproject.toml
livekit_playground/: main.py
livekit_playground/agent/: __init__.py  agent.py  llm.py  options.py  stt.py  tts.py
livekit_playground/assistant/: assistant.py  context.py  contexts.py  options.py
livekit_playground/large_language_models/: anthropic.py
livekit_playground/llm/: __init__.py
livekit_playground/models/: __init__.py  models.py
livekit_playground/stt/: __init__.py  deepgram.py
livekit_playground/text_to_speech/: eleven_labs.py
livekit_playground/tools/: __init__.py  tools.py
livekit_playground/tts/: __init__.py  eleven_labs.py  voice_settings.py
