[tool.poetry]
name = "livekit_playground"
version = "0.1.0"
description = "A playground project for experimenting with LiveKit"
authors = ["Teodor Georgiev <teodorgeorgiev@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
python-dotenv = "^1.0.1"
livekit-agents = "^0.12.13"
livekit-plugins-anthropic = "^0.2.10"
livekit-plugins-deepgram = "^0.6.19"
livekit-plugins-elevenlabs = "^0.7.13"
livekit-plugins-silero = "^0.7.4"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 